src/extension/devtools/panel.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html {
    @apply font-body;
  }

  body {
    @apply text-md;
    @apply font-normal;
  }

  pre,
  code {
    @apply font-code;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    @apply font-heading;
  }

  a {
    @apply underline;
    @apply text-primary;
    @apply dark:text-primary-dark;
  }
}

